@@ -359,6 +359,7 @@ name, date, heure, gamestate, position, name perso, name server, versions
     improvment until new client is buildable.
     see http://rainbrurpg.sourceforge.net/wiki/bin/view/Concept/NewProjectLayout
 **** TODO Code refactoring to follow coding standards
+     CLOCK: [2012-03-17 sam. 23:16]--[2012-03-18 dim. 00:04] =>  0:48
      CLOCK: [2012-03-08 jeu. 18:39]--[2012-03-08 jeu. 19:20] =>  0:41
      CLOCK: [2012-03-06 mar. 08:27]--[2012-03-06 mar. 08:58] =>  0:31
      CLOCK: [2012-03-05 lun. 15:15]--[2012-03-05 lun. 16:03] =>  0:48
