@@ -115,6 +115,8 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-215 (21 jan 2012 - ???) SLOC ??? UT ??? FT ???:??
+- (8) CamelCased some files in common/
+   OptionManager, OptionPanel, Options, OptionStringAttribute, PTypes
 - (7) CamelCased some files in common/
    OptionAttribute, OptionBoolAttribute, OptionButton
    OptionFloatAttribute, OptionFloatRangeAttribute, OptionIntAttribute
